Migrate use of GeoserverDataDirectory to GeoServerResourceLoader.
Fix Factory pre-startup reference to GeoServerResourceLoader

Previous implementation always got null ... and never noticed.
Remove references to GeoserverDataDirectory singleton
Remove GeoserverDataDirectory singleton

Revise based on feedback

GeoServerExtensions init methods added to ease test case writing.